--- a/exercises.css
+++ b/exercises.css
@@ -18,25 +18,30 @@ body {
 .page_title {
     background-color: #01A2A6;
     padding: 5px;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
 }
 
 .page_title_text {
-  font-size: 22pt;
-  margin-left: 5px;
-  margin-right: 0;
-  font-weight: bold;
-  background: transparent;
-  color: white;
-  border: none;
-  cursor: pointer;
+    font-size: 22pt;
+    margin-left: 5px;
+    margin-right: 0;
+    /*flex: 8;*/
+    font-weight: bold;
+    background: transparent;
+    color: white;
+    border: none;
+    cursor: pointer;
+    text-align: left;
 }
 
 .x-button {
-    float: right;
     color: white;
     text-decoration: none;
     font-size: 18pt;
-    vertical-align: center;
+    margin-left: auto;
     background: transparent;
     border: none;
     cursor: pointer;
